bug 724: right-align submit button i favorites data popup

--- a/sass/elements/_specific_elements.scss
+++ b/sass/elements/_specific_elements.scss
@@ -883,6 +883,24 @@ p.note-localisations {
   }
 }
 
+
+// =============================================================================
+// Favorites data popup
+// =============================================================================
+
+#bibdk-favourite-user-form-fields {
+  width: 500px;
+  input#edit-submit {
+    width: 70px;
+    margin-left: 360px;
+    margin-top: 10px;
+  }
+  .form-wrapper {
+    border-width: 0px;
+  }
+}
+
+
 // =============================================================================
 // Christmas special
 // =============================================================================
